Set Native To Responsive

--- a/native/index.html
+++ b/native/index.html
@@ -13,7 +13,7 @@
     <elements-api
       apiDescriptionUrl="https://api.apis.guru/v2/specs/github.com/1.1.4/openapi.yaml"
       router="hash"
-      layout="sidebar"
+      layout="responsive"
     />
 
   </body>
