Add OpenApi Resources

--- a/native/index.html
+++ b/native/index.html
@@ -10,8 +10,14 @@
   </head>
   <body>
 
-    <elements-api
+    <!-- <elements-api
       apiDescriptionUrl="https://api.apis.guru/v2/specs/github.com/1.1.4/openapi.yaml"
+      router="hash"
+      layout="responsive"
+    /> -->
+
+    <elements-api
+      apiDescriptionUrl="../resources/openapi.yaml"
       router="hash"
       layout="responsive"
     />
